# stm32_nucleo_pinout

./: .flake8  .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
boards/G474/: CN5.tsv  CN6.tsv  CN9.tsv  info.txt  morpho.tsv  pinout.json
boards/UM2407/: CN10.tsv  CN7.tsv  CN8.tsv  CN9.tsv  arduino_footnotes.txt  info.txt  morpho.tsv  morpho_footnotes.txt
docs/: how_to_create_new_board.md  how_to_create_template.md
stm32_nucleo_pinout/: check_board.py  check_template.py  generate_pinout.py  regenerate_all_pinouts.py  stm32_nucleo_pinout.py
stm32_nucleo_pinout/boards/: boards.json  functions_alias.json
stm32_nucleo_pinout/boards/G474/: CN8.tsv  arduino_footnotes.txt  morpho_footnotes.txt
stm32_nucleo_pinout/boards/UM2407/: pinout.json
stm32_nucleo_pinout/templates/nucleo64/: info.json
templates/: templates.json
templates/nucleo144/: info.json
templates/nucleo64/: info.json
tests/: test_PinParserArduino.py  test_get_allocated_pins.py
