[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "stm32_nucleo_pinout"
version = "0.9.1"
description = "A package to generate pinout images for STM32 Nucleo boards, based on STM32CubeIDE/STM32CubeMX report file"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Daniel Alvarez", email = "danidask@gmail.com"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas>=1.3",
    "Pillow>=11.0.0",
]

[project.urls]
Repository = "https://github.com/danidask/stm32_nucleo_pinout"

[project.scripts]
stm32_nucleo_pinout = "stm32_nucleo_pinout.stm32_nucleo_pinout:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
stm32_nucleo_pinout = [
    "boards/**/*",
    "templates/**/*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
